k8s-dev1-comghost/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: jenkins
  name: frontend-admin
  labels:
    env: production
    tier: frontend
    app: admin
    name: frontend-admin-service
spec:
  type: NodePort
  ports:
    - name: frontend-admin-http
      port: 3000
      targetPort: 3000
      nodePort: 30011
  selector:
    env: production
    tier: frontend
    app: admin
    name: frontend-admin-pod
