k8s-dev1-comghost/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-admin-ingress
  labels:
    env: production
    tier: frontend
    app: admin
    name: frontend-admin-ingress
spec:
  rules:
    - host: http://admin.192.168.100.66.nip.io # TODO
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend-admin
              servicePort: 3000
